err/pastpy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aenum'...
Listing './lib/python3.5/site-packages/aenum-2.0.9.dist-info'...
Listing './lib/python3.5/site-packages/dbf'...
Compiling './lib/python3.5/site-packages/dbf/_index.py'...
***   File "./lib/python3.5/site-packages/dbf/_index.py", line 14
    '\x00'*500)                             # and no indices
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dbf/ver_2.py'...
***   File "./lib/python3.5/site-packages/dbf/ver_2.py", line 7598
    exec function in g
                ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/dbf-0.96.8.dist-info'...
Listing './lib/python3.5/site-packages/pastpy'...
Compiling './lib/python3.5/site-packages/pastpy/_dbf_table.py'...
***   File "./lib/python3.5/site-packages/pastpy/_dbf_table.py", line 45
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pastpy/models'...
Listing './lib/python3.5/site-packages/pastpy-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
